--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vituum/vite-plugin-nunjucks": "^1.1.0",
     "sass": "^1.87.0",
-    "vite": "^6.3.4"
+    "vite": "^6.3.4",
+    "vituum": "^1.2.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
