--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vituum/vite-plugin-nunjucks": "^1.1.0",
     "sass": "^1.87.0",
     "vite": "^6.3.4",
+    "vite-plugin-live-reload": "^3.0.4",
     "vituum": "^1.2.0"
   },
   "dependencies": {
